# Alpha-Zero-implemented-through-Libtorch

./: 2113.pkl  37.pt  CMakeLists.txt  README.md  train.sh  train_net.sh  windows train.bat  windows命令.txt
src/: common.h  common.py  config.py  gomoku.cpp  gomoku.h  learner.py  libtorch.cpp  libtorch.h  mcts.cpp  mcts.h  neural_network.py  play.cpp  play.h  read_data.py
src——all/: common.h  libtorch.cpp  libtorch.h
src——其它/: mcts.cpp  mcts.h  play.cpp
test/: gomoku_test.cpp  libtorch_test.cpp  mcts_test.cpp  multi_games_test.cpp  train_net_test.cpp
交互异心/: 交互.ipynb  打开笔记本.bat
交互异心/.ipynb_checkpoints/: 交互-checkpoint.ipynb
